package maidsafe.passport;

message Key {
  required bytes name = 1;
  required int32 packet_type = 2;
  required bytes public_key = 3;
  required bytes private_key = 4;
  required bytes public_key_signature = 5;
}

message Keyring {
  repeated Key key = 1;
}
